postprocess merge and cleanup